--- a/test.html
+++ b/test.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo App</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon-32x32.png">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <header>
+        <nav>
+            <a id="homeLink">
+                <img src="/img/cat.png" height="100" alt="To Do">
+            </a>
+        </nav>
+        <section id="searcSection">
+            <label for="search" id="searchLabel">Пошук</label>
+            <input type="text" placeholder="" id="search">
+            <img id="searchIcon" src="/img/search_icon.png" alt="Search">
+        </section>
+    </header>
+
+    <main>
+        <section>
+            <h1>Мої задачі</h1>
+        </section>
+
+        <section class="taskListClass" id="taskList">
+            <div class="task" id="addTask">
+                <div class="taskName">
+                    <div class="radio leftElement"></div>
+                    <input type="text" id="addTaskInput" placeholder="Додати задачу">
+                </div>
+            </div>
+            <div id="options">
+                <button disabled id="addButton">Додати задачу</button>
+            </div>
+            <div id="demo"></div>
+        </section>
+
+        <section>
+            <h2>Виконані задачі</h2>
+        </section>
+        <section class="taskListClass" id="doneTaskList"></section>
+    </main>
+    <script src="/index.js"></script>
 </body>
 </html>
